// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders expected classes 1`] = `
<div>
  <div
    class="desktopContainer Input-sc-4gf5js-0-div text__c-txt__input___2ZeOl text__c-txt__input--media___238Mn hytfkM"
    data-garden-id="textfields.input"
    data-garden-version="3.7.0"
  >
    <label
      class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
      data-garden-id="textfields.label"
      data-garden-version="3.7.0"
    >
      hello there
    </label>
    <input
      aria-invalid="false"
      autocapitalize="off"
      class="searchInput Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--bare___2auEk kdlara"
      data-garden-id="textfields.input"
      data-garden-version="3.7.0"
      placeholder="hello there"
      type="search"
      value=""
    />
    <div
      class="desktopSearchOrLoading MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
      data-garden-id="textfields.media_figure"
      data-garden-version="3.7.0"
    >
      <span
        class="icon notFocused"
        data-testid="Icon--search"
        role="button"
        tabindex="0"
      >
        <svg
          realfilename="search.svg"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders expected classes for mobile 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,5 +1,5 @@
  <div>
    <div
-     class="desktopContainer Input-sc-4gf5js-0-div text__c-txt__input___2ZeOl text__c-txt__input--media___238Mn hytfkM"
+     class="mobileContainer Input-sc-4gf5js-0-div text__c-txt__input___2ZeOl text__c-txt__input--media___238Mn hytfkM"
      data-garden-id="textfields.input"
      data-garden-version="3.7.0"
@@ -15,5 +15,5 @@
        aria-invalid="false"
        autocapitalize="off"
-       class="searchInput Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--bare___2auEk kdlara"
+       class="searchInput mobileSearchInput Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--bare___2auEk kdlara"
        data-garden-id="textfields.input"
        data-garden-version="3.7.0"
@@ -23,10 +23,15 @@
      />
      <div
-       class="desktopSearchOrLoading MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
+       class="mobileNonSearchIconContainer MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
+       data-garden-id="textfields.media_figure"
+       data-garden-version="3.7.0"
+     />
+     <div
+       class="mobileSearchIcon MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
        data-garden-id="textfields.media_figure"
        data-garden-version="3.7.0"
      >
        <span
-         class="icon notFocused"
+         class="icon"
          data-testid="Icon--search"
          role="button"
`;

exports[`renders loading classes 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -27,14 +27,31 @@
        data-garden-version="3.7.0"
      >
-       <span
-         class="icon notFocused"
-         data-testid="Icon--search"
-         role="button"
-         tabindex="0"
+       <div
+         aria-busy="true"
+         aria-live="polite"
+         class="container "
        >
-         <svg
-           realfilename="search.svg"
+         <div
+           class="
+       circle 
+       bounce
+       u-userBackgroundColor
+     "
+         />
+         <div
+           class="
+       circle 
+       bounce
+       u-userBackgroundColor
+     "
          />
-       </span>
+         <div
+           class="
+       circle 
+       bounce
+       u-userBackgroundColor
+     "
+         />
+       </div>
      </div>
    </div>
`;

exports[`renders loading classes in mobile 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,5 +1,5 @@
  <div>
    <div
-     class="desktopContainer Input-sc-4gf5js-0-div text__c-txt__input___2ZeOl text__c-txt__input--media___238Mn hytfkM"
+     class="mobileContainer Input-sc-4gf5js-0-div text__c-txt__input___2ZeOl text__c-txt__input--media___238Mn hytfkM"
      data-garden-id="textfields.input"
      data-garden-version="3.7.0"
@@ -15,5 +15,5 @@
        aria-invalid="false"
        autocapitalize="off"
-       class="searchInput Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--bare___2auEk kdlara"
+       class="searchInput mobileSearchInput Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--bare___2auEk kdlara"
        data-garden-id="textfields.input"
        data-garden-version="3.7.0"
@@ -22,11 +22,44 @@
        value=""
      />
+     <div
+       class="mobileNonSearchIconContainer MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
+       data-garden-id="textfields.media_figure"
+       data-garden-version="3.7.0"
+     >
+       <div
+         aria-busy="true"
+         aria-live="polite"
+         class="container "
+       >
          <div
-       class="desktopSearchOrLoading MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
+           class="
+       circle 
+       bounce
+       u-userBackgroundColor
+     "
+         />
+         <div
+           class="
+       circle 
+       bounce
+       u-userBackgroundColor
+     "
+         />
+         <div
+           class="
+       circle 
+       bounce
+       u-userBackgroundColor
+     "
+         />
+       </div>
+     </div>
+     <div
+       class="mobileSearchIcon MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
        data-garden-id="textfields.media_figure"
        data-garden-version="3.7.0"
      >
        <span
-         class="icon notFocused"
+         class="icon"
          data-testid="Icon--search"
          role="button"
`;
